syntax = "proto3";

package yandex.cloud.priv.loadtesting.v1;

import "ydb/public/api/client/yc_private/common/validation.proto";
import "ydb/public/api/client/yc_private/operation/operation.proto";

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/loadtesting;loadtesting";
option java_outer_classname = "POS";

service OperationService {
  rpc Get (GetOperationRequest) returns (operation.Operation);
  rpc List (ListOperationsRequest) returns (ListOperationsResponse);
  rpc BatchDelete (BatchDeleteOperationsRequest) returns (operation.Operation);
}

message GetOperationRequest {
  string operation_id = 1 [(required) = true, (length) = "<=50"];
}

message ListOperationsRequest {
  string folder_id = 1 [(required) = true, (length) = "<=50"];
  int64 page_size = 2 [(value) = "0-1000"];
  string page_token = 3 [(length) = "<=200"];
}

message ListOperationsResponse {
  repeated operation.Operation operations = 1;
  string next_page_token = 2;
}

message BatchDeleteOperationsRequest {
  string folder_id = 1 [(required) = true, (length) = "<=50"];
}
